--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "html-starter",
   "main": "gulpfile.js",
+  "engines": {
+    "node": ">=8"
+  },
   "scripts": {
     "start": "node ./node_modules/gulp/bin/gulp.js dev",
     "build": "node ./node_modules/gulp/bin/gulp.js build"
@@ -12,15 +15,15 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/vvvgorbunov/html-starter/src/master/#readme",
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "browser-sync": "^2.23.6",
-    "del": "^3.0.0",
-    "gulp": "git://github.com/gulpjs/gulp.git#6d71a658c61edb3090221579d8f97dbe086ba2ed",
-    "gulp-autoprefixer": "^4.1.0",
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-compile-handlebars": "^0.6.1",
@@ -31,30 +34,35 @@
     "gulp-csso": "^3.0.1",
     "gulp-dom-src": "^0.2.0",
     "gulp-html-replace": "^1.6.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-imagemin": "^6.1.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.6.1",
-    "gulp-sass": "^3.2.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sftp-fix": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "^1.3.7",
-    "gulp-svgmin": "^1.2.4",
+    "gulp-svgmin": "^2.2.0",
     "gulp-trim": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "gulp-uglify-es": "^1.0.4",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.9.0",
-    "merge-stream": "^1.0.1",
-    "yargs": "^10.1.2"
+    "merge-stream": "^2.0.0",
+    "yargs": "^14.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@babel/polyfill": "^7.6.0",
     "critical": "^1.3.4",
-    "gulp-debug": "^3.2.0",
+    "gulp-debug": "^4.0.0",
     "html5shiv": "^3.7.3",
     "jquery": "^3.3.1",
     "svg4everybody": "^2.1.9"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
