--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
+    "autoprefixer": "^9.7.1",
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "git://github.com/gulpjs/gulp.git#6d71a658c61edb3090221579d8f97dbe086ba2ed",
